hphp/hack/test/typecheck/reified_generics/reifiable.php.exp
File "reifiable.php", line 11, characters 21-30:
PHP arrays cannot be used as a reified type argument (Typing[4305])
File "reifiable.php", line 8, characters 23-26:
This abstract type constant does not have the __Reifiable attribute
File "reifiable.php", line 3, characters 15-15:
T is reified
